--- a/CSS/style.css
+++ b/CSS/style.css
@@ -435,6 +435,7 @@ label.error {
   }
 
    /* Flip card end  */
+   
 
  /* Footer */
    
@@ -962,3 +963,66 @@ li:hover {
   padding: -25px;
 }
 /*---- end pop expand */ 
+
+
+.poem {
+	margin: 20px 50%;
+
+}
+figure {
+	position: relative;
+	background: url(https://cdnw.nickpic.host/v1TG0s.png);
+	width: 300px;
+	height: 400px;
+	box-sizing: border-box;
+	display: inline-block;
+	margin: 0 auto;
+	background-color: rgba(230, 230, 230, 0.7);
+	color: #666;
+	transition: all 0.35s ease;
+	overflow: hidden;
+	backface-visibility: hidden;
+	box-shadow: 3px 2px 24px 0px rgba(190, 158, 167, 1);
+}
+figure p {
+	width: 320px;
+	background-color: rgba(255, 255, 255, 0.9);
+	border-bottom: 5px solid rgba(190, 158, 167, 0.4);
+	font-family: "Special Elite", cursive;
+	padding: 20px;
+	bottom: 5px;
+	position: absolute;
+	transition: all 0.45s ease;
+}
+
+/***/
+
+figure figcaption {
+	transform: translateX(-120%);
+	background-color: rgba(255, 255, 255, 0.9);
+	width: 250px;
+	height: 330px;
+	padding: 20px;
+	position: absolute;
+	top: 0px;
+	bottom: 15px;
+	left: 0px;
+	right: 15px;
+	font-family: "Faustina", serif;
+	font-size: 15px;
+	border: 15px solid rgba(190, 158, 167, 0.4);
+	transition: all 1.5s ease;
+}
+
+figure:hover figcaption {
+	transition: all 1s ease;
+	transform: translate(0, 0);
+}
+figure:hover p {
+	transform: translateX(-120%);
+}
+
+figure .author {
+	text-align: right;
+	margin-top: 25px;
+}
