--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,6 +16,8 @@
   --box-shadow: 5px 5px 10px #b6acac, -5px -5px 10px #faf4f4;
   --cal: black;
   --transp: rgba(255, 255, 255, 0.6);
+  --line: 1px solid black;
+  --info: #000000a9;
 }
 
 [data-theme="dark"] {
@@ -31,6 +33,8 @@
   --box-shadow: 1px 1px 2px #faf4f4 , -2px -2px 10px #b6acac;
   --cal: white;
   --transp: rgba(22, 21, 21, 0.6);
+  --line: 1px solid white;
+  --info: #ffffff91;
 }
 
 
@@ -938,6 +942,7 @@ li {
   pointer-events: none;
 }
 
+
 #mydiv {
   position: absolute;
   z-index: 10;
@@ -969,68 +974,11 @@ li {
 
 
 
-.cardwork {
-	margin: 1% 50% 
-  
-}
-figure {
-	position: relative;
-	background: url(https://cdnw.nickpic.host/v1TG0s.png);
-	width: 300px;
-	height: 400px;
-
-	
-	background-color: rgba(230, 230, 230, 0.7);
-	color: #666;
-	transition: all 0.35s ease;
-	overflow: hidden;
-	backface-visibility: hidden;
-	box-shadow: 3px 2px 24px 0px rgba(190, 158, 167, 1);
-  
-}
-figure p {
-	width: 320px;
-	background-color: rgba(255, 255, 255, 0.9);
-	border-bottom: 5px solid rgba(190, 158, 167, 0.4);
-	padding: 20px;
-	bottom: 5px;
-	position: absolute;
-	transition: all 0.45s ease;
-  
-}
-
-/***/
-
-figure figcaption {
-	transform: translateX(-120%);
-	background-color: rgba(255, 255, 255, 0.9);
-	width: 300px;
-	height: 400px;
-	padding: 10px;
-	position: absolute;
-	top: 0px;
-	bottom: 15px;
-	left: 0px;
-	right: 15px;
-	font-size: 15px;
-	border: 15px solid rgba(190, 158, 167, 0.4);
-	transition: all 1.5s ease;
-  
-}
-
-figure:hover figcaption {
-	transition: all 1s ease;
-	transform: translate(0, 0);
- 
-  
-}
-figure:hover p {
-	transform: translateX(-120%);
-  
-}
 
 
 
+
+/*Carousel**/
 
 *,
 *::before,
@@ -1204,4 +1152,72 @@ figure:hover p {
   z-index: 10;
   background-color: transparent;
   color: transparent;
+}
+
+.dropdown {
+  padding-top: 4rem;
+  width: 50%;
+  margin: auto;
+}
+
+details[open] summary ~ * {
+  animation: open 0.3s ease-in-out;
+}
+
+@keyframes open {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+details summary::-webkit-details-marker {
+  display: none;
+}
+
+details summary {
+  width: 100%;
+  padding: 0.5rem 0;
+  border-top: var(--line);
+  position: relative;
+  cursor: pointer;
+  font-size: 1.25rem;
+  font-weight: 300;
+  list-style: none;
+}
+
+details summary:after {
+  content: "+";
+  color: var(--line);
+  position: absolute;
+  font-size: 1.75rem;
+  line-height: 0;
+  margin-top: 0.75rem;
+  right: 0;
+  font-weight: 200;
+  transform-origin: center;
+  transition: 200ms linear;
+}
+details[open] summary:after {
+  transform: rotate(45deg);
+  font-size: 2rem;
+}
+details summary {
+  outline: 0;
+}
+details p {
+  font-size: 0.95rem;
+  margin: 0 0 1rem;
+  padding-top: 1rem;
+}
+
+.dropdown h1 {
+  text-align: center;
+}
+
+.dropdown small {
+ color: var(--info);
+ position: absolute;
+ top: 155px
 }
