--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,6 +18,8 @@
   --transp: rgba(255, 255, 255, 0.6);
   --line: 1px solid black;
   --info: #000000a9;
+  --figshadow: 0px 0px 30px 0px #4e4242;
+  --bordbottom: 5px solid rgba(83, 3, 26, 0.712);
 }
 
 [data-theme="dark"] {
@@ -35,6 +37,8 @@
   --transp: rgba(22, 21, 21, 0.6);
   --line: 1px solid white;
   --info: #ffffff91;
+  --figshadow: 0px 0px 30px 0px #ecc7c7;
+  --bordbottom: 5px solid rgba(117, 51, 70, 0.89);  
 }
 
 
@@ -1041,30 +1045,7 @@ li {
   -ms-touch-action: pan-y;
   touch-action: pan-y; }
 
-.work {
-  width: 100%; }
-  .work .img {
-    width: 100%;
-    height: 300px;
-    position: relative;
-    -webkit-box-shadow: 0px 20px 35px -30px rgba(0, 0, 0, 0.26);
-    -moz-box-shadow: 0px 20px 35px -30px rgba(0, 0, 0, 0.26);
-    box-shadow: 0px 20px 35px -30px rgba(0, 0, 0, 0.26); }
-    .work .img .icon {
-      width: 70px;
-      height: 70px;
-      border-radius: 50%;
-      background: #fff;
-      display: block;
-      opacity: 0;
-      -webkit-transition: 0.3s;
-      -o-transition: 0.3s;
-      transition: 0.3s; }
-      @media (prefers-reduced-motion: reduce) {
-        .work .img .icon {
-          -webkit-transition: none;
-          -o-transition: none;
-          transition: none; } }
+
   .work .text h3 {
     font-size: 18px;
     font-weight: 500; }
@@ -1076,9 +1057,7 @@ li {
     color: rgba(0, 0, 0, 0.3);
     text-transform: uppercase;
     font-weight: 500; }
-  .work:hover .img .icon {
-    opacity: 1; }
-
+  
     
 .cardwork {
 	margin: 1% 50% 
@@ -1088,27 +1067,22 @@ figure {
 	position: relative;
 	width: 300px;
 	height: 400px;
-
-	
-	background-color: rgba(230, 230, 230, 0.7);
-	color: #666;
+	background-color: rgba(0, 0, 0, 0.7);
 	transition: all 0.35s ease;
 	overflow: hidden;
 	backface-visibility: hidden;
-	box-shadow: 3px 2px 24px 0px rgba(190, 158, 167, 1);
+	box-shadow: var(--figshadow);
 }
 figure p {
 	width: 320px;
 	background-color: var(--font-color);
-	border-bottom: 5px solid rgba(245, 0, 69, 0.4);
+	border-bottom: var(--bordbottom);
 	padding: 20px;
 	bottom: 5px;
   color: var(--time-line);
 	position: absolute;
 	transition: all 0.45s ease;
 }
-
-/***/
 
 figure figcaption {
 	transform: translateX(-120%);
@@ -1123,8 +1097,8 @@ figure figcaption {
 	left: 0px;
 	right: 15px;
 	font-size: 15px;
-	border: 15px solid rgba(190, 158, 167, 0.4);
-	transition: all 1.5s ease;
+	border: 15px solid rgba(0, 0, 0, 0.4);
+	transition: all 0.5s ease;
 }
 
 figure:hover figcaption {
@@ -1135,7 +1109,7 @@ figure:hover p {
 	transform: translateX(-120%);
 }
 
-
+/* end Figure */
 
 .draggable {
   position: absolute;
