--- a/CSS/style.css
+++ b/CSS/style.css
@@ -465,7 +465,7 @@ label.error {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: relative;
+    position: fixed;
  
    }
 
