--- a/CSS/style.css
+++ b/CSS/style.css
@@ -467,7 +467,7 @@ label.error {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: fixed;
+    position: relative;
    }
 
    .social-icons a{
