--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
-
+html{
+  height: 100%  ;
+}
 
 /*-- Dark theme */
 
@@ -129,9 +131,14 @@ input:checked + .slider .feather-sun {
 }
 
 /*-- END Dark theme */
-main {
-  
-  padding-bottom: 750px;
+
+
+body {
+flex-direction: column;
+min-height: 100%;
+line-height: 1.6;
+margin: 0;
+display: flex;
 }
 
 :root {
@@ -196,15 +203,15 @@ nav {
   
   main {
     background: var(--main-bg);
-    position: fixed;
+    position: flex;
     width: 100%;
-    height: 96%;
+    height: 100%;
   }
   * {
     color: var(--font-color);
   }
 
- /* Social media */
+
 
 
 /*info me */
@@ -450,24 +457,29 @@ label.error {
    
 
  /* Footer */
-   
-   footer p:nth-child(1){
-    font-size: 30px;
-    font-weight:bold;
-    line-height:10px;
-   }
-   footer p:nth-child(2){
-    font-size: 16px;
-    width:600px;
-    text-align: center;
-   }
-   footer{
-    height:300px;
+  .socialcontainer
+  {
+    background-color: rgba(226, 89, 89, 0.356);
+    
+  } 
+
+  .socialcontainer h2
+  {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    position: relative;
+  }
+
+  .socialcontainer p
+  {
+    display: flex;
+    justify-content: center;
+  }
+
+   
+   footer{
+    display: flex;
+    justify-content: center;
+    margin-top: auto;
    }
 
    .social-icons a{
@@ -476,38 +488,23 @@ label.error {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:#ee0e0e00;
+    background-color:transparent;
     margin:20px 10px;
     border-radius:50%;
    }
    .social-icons{
+    background-color: transparent;
     display: flex;
-
    }
    .social-icons a:hover{
     background-color:#1b6bebe1;
     box-shadow:0px 0px 8px  var(--font-color);
     transition:all ease 0.5s;
-   }
-   .social-icons a:hover i,
-   .social a:hover i{
-    color:#f5f5f5;
-    transition:all ease 0.5s;
-   }
-    
+    }
+   
    .copyright{
-
-    font-size: 12px;
-    position: absolute;
-    left:50%;
-    bottom:10px;
-    transform: translateX(-50%);
-   }
-   .social{
-    position: fixed;
-    top:50%;
-    right:0px;
-    transform:translateY(-50%);
+    font-size: 14px;
+    background-color: transparent;
    }
 
  /* Footer End */
@@ -819,14 +816,14 @@ label.error {
 
 
 /** -- expand */
-
+.expando__js-expando{
+  background-color: red;
+}
 
 .expando {
-  
   border-radius: 20px;
   overflow: hidden;
   position: relative;
-
   will-change: transform;
 }
 
