--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,6 +22,7 @@ html{
   --info: #000000a9;
   --figshadow: 0px 0px 30px 0px #4e4242;
   --bordbottom: 5px solid rgba(83, 3, 26, 0.712);
+  --box-shadow2: 2px 2px 12px rgba(1, 1, 1, 1);
 }
 
 [data-theme="dark"] {
@@ -40,7 +41,8 @@ html{
   --line: 1px solid white;
   --info: #ffffff91;
   --figshadow: 0px 0px 30px 0px #ecc7c7;
-  --bordbottom: 5px solid rgba(117, 51, 70, 0.89);  
+  --bordbottom: 5px solid rgba(117, 51, 70, 0.89); 
+  --box-shadow2: 2px 2px 12px rgb(209, 209, 209); 
 }
 
 
@@ -1193,13 +1195,14 @@ button:active{
   max-width: 400px;
   margin: auto;
   overflow: hidden;
-  box-shadow:2px 2px 12px rgba(1, 1, 1, 1);
+  box-shadow:var(--box-shadow2);
+  margin: 50px 0px 20px 0px;
 }
 
 .content .content-overlay {
   background: #000000a9;
   position: absolute;
-  height: 99%;
+  height: 100%;
   width: 100%;
   left: 0;
   top: 0;
@@ -1240,7 +1243,7 @@ button:active{
 
 .content h3 {
   display: inline-block;
-  position: relative;
+  
   transition: all 300ms ease-out;
   will-change: transform;
 }
@@ -1253,6 +1256,7 @@ button:active{
 
 .containerleft{
   padding: 1rem;
-  overflow:auto;
-  
+  background-color: red;
+  margin: fixed;
+  overflow:hidden ;
 }
