--- a/CSS/style.css
+++ b/CSS/style.css
@@ -738,37 +738,25 @@ label.error {
 
 /* -----  Tittak */
 
-
-
-
-table {
-  border-collapse: collapse;
-  margin-bottom: 1em;
-}
-
-td {
-  width: 90px;
-  height: 90px;
+section.tictak {
   text-align: center;
-  line-height: 80px;
+}
+.game--container {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  width: 306px;
+  margin: 50px auto;
+}
+.cell {
+  font-family: "Permanent Marker", cursive;
+  width: 100px;
+  height: 100px;
+  box-shadow: 0 0 0 1px #333333;
+  border: 1px solid #333333;
+  cursor: pointer;
+line-height: 100px;
   font-size: 60px;
 }
-
-td + td {
-  border-left: 1px solid black;
-}
-
-tr + tr td {
-  border-top: 1px solid black;
-}
-.board {
-
-  grid-template-columns: 200px 200px 200px;
-  grid-template-rows: 200px 200px 200px;
-  font-family: 'Lato', sans-serif;
-  border: solid 1px black;
-}
-
 
 /* -----  Calculator */
 
