--- a/CSS/style.css
+++ b/CSS/style.css
@@ -301,6 +301,27 @@ nav {
   letter-spacing: .2rem;
   text-transform: uppercase;
   border-radius: 30px !important; }
+
+  .btntic {
+    letter-spacing: .5rem;
+    text-transform: uppercase;
+    font-size: 120%;
+    border: none;
+    background-color: transparent;
+    font-family: calibri;
+  }
+
+  .player {
+
+      letter-spacing: .5rem;
+      text-transform: uppercase;
+      font-size: 120%;
+      border: none;
+      background-color: transparent;
+      font-family: calibri;
+    }
+  
+  
   .btn.btn-primary {
     border-radius: 30px;
     background: #4d80e4;
@@ -439,24 +460,20 @@ label.error {
    
 
  /* Footer */
-  .socialcontainer
-  {
-    justify-content: center;
-  } 
+ 
+ 
+ .footer {
+  margin-top: auto;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: transparent;
+  color: white;
+  text-align: center;
+}
+ 
 
-  .socialcontainer h2
-  {
-    display: flex;
-    justify-content: center;
-  }
-
-  .socialcontainer p
-  {
-    display: flex;
-    justify-content: center;
-  }
-
-   
+ 
 
    .social-icons a{
     width:40px;
@@ -464,12 +481,12 @@ label.error {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:transparent;
+
     margin:20px 10px;
     border-radius:50%;
    }
    .social-icons{
-    background-color: transparent;
+
     display: flex;
     justify-content: center;
    }
@@ -481,86 +498,13 @@ label.error {
    
    .copyright{
     font-size: 14px;
-    background-color: transparent;
    }
 
  /* Footer End */
 
 
 
- /* Form */
-
- .form-container {
-	width: 600px;
-	margin-left: auto;
-	margin-right: auto;
-	/*margin-top:90px;
-	margin-bottom: 30px;*/
-	padding: 30px;
-
-	position: relative;
-	    box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 20px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -5px rgba(0,0,0,0.3);
-
-	top: -80px;
-	left: 300px  ;
-
-
-	transform: translate(-50%, 50%);
-}
-
-.form-container .row {
-	margin-bottom: 15;
-}
-
-
-
-
-   
-   /* label underline focus color */
-   .input-field input[type=text]:focus {
-     border-bottom: 1px solid #9c9c9c;
-     box-shadow: 0 1px 0 0 #9c9c9c;
-   }
-   /* valid color */
-   .input-field input[type=text].valid {
-     border-bottom: 1px solid #9c9c9c;
-     box-shadow: 0 1px 0 0 #9c9c9c;
-   }
-   /* invalid color */
-   .input-field input[type=text].invalid {
-     border-bottom: 1px solid #9c9c9c;
-     box-shadow: 0 1px 0 0 #9c9c9c;
-   }
-   /* icon prefix focus color */
-   .input-field .prefix.active {
-     color: #9c9c9c;
-   }
-.form-container .btn {
-    background-color: #b35d61;
-
-}
-.submitbtn {
-	line-height: 48px;
-	display: block;
-	height: 48px;
-	width: 100%;
-}
-.form-container h3 {
-	font-size: 42px;
-    letter-spacing: 0.1em;
-    margin: 0;
-    padding: 0;
-
-    font-weight: 700;
-    text-transform: uppercase;
-    position: absolute;
-    top: -46px;
-
-	}
-	.form-container h3 {
-	    font-size: 24px;
-	    top: -26px;
-	}
+ 
 
 
 /* ================ The Timeline ================ */
@@ -738,24 +682,26 @@ label.error {
 
 /* -----  Tittak */
 
-section.tictak {
+
+table {
+  border-collapse: collapse;
+  margin-bottom: 1em;
+}
+
+td {
+  width: 90px;
+  height: 90px;
   text-align: center;
+  line-height: 80px;
+  font-size: 50px;
 }
-.game--container {
-  display: grid;
-  grid-template-columns: repeat(3, auto);
-  width: 306px;
-  margin: 50px auto;
+
+td + td {
+  border-left: 2px solid black;
 }
-.cell {
-  font-family: "Permanent Marker", cursive;
-  width: 100px;
-  height: 100px;
-  box-shadow: 0 0 0 1px #333333;
-  border: 1px solid #333333;
-  cursor: pointer;
-line-height: 100px;
-  font-size: 60px;
+
+tr + tr td {
+  border-top: 2px solid black;
 }
 
 /* -----  Calculator */
