--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -1,3 +1,12 @@
+:root {
+   --vakjegrijs: rgb(90, 90, 90);
+  }
+  
+  [data-theme="dark"] {
+    --vakjegrijs: rgb(0, 0, 0);
+  }
+
+
 #fcf-form {
     display:block;
 }
@@ -10,10 +19,10 @@
     line-height: 1.5;
     color: #212529;
     text-align: left;
-    background-color: #fff;
+    background-color: var(--vakjegrijs);
     padding: 30px;
     padding-bottom: 10px;
-    border: 1px solid #ced4da;
+    border: 1px solid #0080ff;
     border-radius: 0.25rem;
     max-width: 100%;
 }
@@ -42,9 +51,9 @@
     font-weight: 400;
     line-height: 1.5;
     color: #495057;
-    background-color: #fff;
+    background-color: var();
     background-clip: padding-box;
-    border: 1px solid #ced4da;
+    border: 1px solid #007af3;
     outline: none;
     border-radius: 0.25rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
