--- a/CSS/style.css
+++ b/CSS/style.css
@@ -959,6 +959,7 @@ figure:hover p {
   background-color: transparent;
   border: 1px solid transparent;
   text-align: center;
+  
 }
 
 .draggable {
@@ -1255,4 +1256,19 @@ button:active{
 .form-control-active {
 background-color: red;
 color: red;
+}
+
+.rainbow-pixel-canvas {
+  width: 100%;
+  height: 200px;
+  box-sizing: border-box;
+  background: white;
+
+  user-select: none;
+  touch-action: none;
+}
+p {
+  text-align: center;
+  font-family: monospace;
+  font-size: 1.25rem;
 }
