--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1209,6 +1209,18 @@ button:active{
 
 /* contact pagina */
 
+.beschikbaar-container{
+  box-shadow: var(--box-shadow2);
+  text-align: center;
+  border-radius:10px;
+  background-color: var(--contact);
+}
+
+.beschikbaar{
+  color: rgba(255, 255, 255, .55);
+}
+
+
 
 .contact-container{
   box-shadow: var(--box-shadow2);
@@ -1255,4 +1267,66 @@ button:active{
 .form-control-active {
 background-color: red;
 color: red;
+}
+
+/* (A) ORDER FORM */
+#orderform {
+  width: 300px;
+  height: 410px;
+  margin: auto;
+  border-radius: 10px;
+  background: var(--time-line);
+  box-shadow: 1px 1px 5px rgb(129, 121, 121), -1px -1px 5px rgb(163, 113, 113);
+  height: 10%;
+  padding: 1%;
+}
+#orderform h1 { margin: 0; }
+#orderform label, #orderform input, #orderform textarea {
+  width: 210px;
+  margin: 1% 5% 1% 12%;
+ height: 5%;
+ top: 5%;
+}
+#orderform input[type=submit] {
+  margin: 1% 13% auto;
+  height: 20px;
+  background: #c02c2c;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 5%;
+  position: static;
+}
+
+input{
+  position: relative;
+  background-color: rgb(143, 86, 86);
+  top: 5%;
+}
+
+select {
+  margin: 1% 30%;
+  background-color: rgb(185, 166, 166);
+}
+/* (B) NOTIFICATION BAR */
+.notify {
+  background: #d7ffe9;
+  margin:  auto ;
+  width: 15%;
+  font-weight: bold;
+}
+
+
+.hoeveelheid {
+margin: 0% 40% auto;
+}
+
+table{
+  border: 1px solid #000000;
+    background: red;
+    margin: auto;
+    text-align: center;
+}
+
+.notify{
+  background-color: red;
 }
